did_my_ homework_v1

--- a/index.html
+++ b/index.html
@@ -1,148 +1,187 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>"Homework-#-3-home-page"</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./css/modern-normalize.css">
-        <link rel="stylesheet" href="./css/styles.css" />
-    </head> 
-    <body class="body-styles">
-<!-- Header -->
-        <header>
-    <div class="container">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>"Homework-#-3-home-page"</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body class="body-styles">
+    <!-- Header -->
+    <header>
+      <div class="container section header_border">
         <div class="all_nav">
-            <a class="nav_all_link_logo studiocolor-top" href="https://masenkoss.github.io/goit-markup-hw-02/"><span class="webcolor">Web</span>Studio</a>
-            <nav>
-                <ul class="nav_all_link">
-                    <li class="item">
-                        <a class="nav-link" href="https://masenkoss.github.io/goit-markup-hw-02/index.html">Студия</a>
-                    </li>
-                    <li class="item">
-                        <a class="nav-link" href="https://masenkoss.github.io/goit-markup-hw-02/portfolio.html">Портфолио</a>
-                    </li>
-                    <li class="item">
-                        <a class="nav-link" href="">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-             <div>
-            <ul class="contact_nav">
-                <li class="item">
-                    <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
-                </li>
-                <li class="item">
-                    <a class="nav-link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
+          <a
+            class="nav_all_link_logo studiocolor-top"
+            href="https://masenkoss.github.io/goit-markup-hw-02/"
+            ><span class="webcolor">Web</span>Studio</a
+          >
+          <nav>
+            <ul class="nav_all_link">
+              <li class="item">
+                <a
+                  class="nav-link"
+                  href="https://masenkoss.github.io/goit-markup-hw-02/index.html"
+                  >Студия</a
+                >
+              </li>
+              <li class="item">
+                <a
+                  class="nav-link"
+                  href="https://masenkoss.github.io/goit-markup-hw-02/portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="item">
+                <a class="nav-link" href="">Контакты</a>
+              </li>
             </ul>
-            </div>
+          </nav>
+          <div>
+            <ul class="contact_nav">
+              <li class="item">
+                <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
+              </li>
+              <li class="item">
+                <a class="nav-link-tel" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-    </div>
-        </header>
-        <!-- Start main-content -->
-        <main class="container">
-            <section class="complementary section">
-                <h1 class="font-size-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ<span>ДЛЯ ВАШЕГО БИЗНЕСА</span></h1>
-                <button type="button" class="pointer font-size-button-index">
-                    Заказать слугу
-                </button>
-            </section>
-            <section class="section">
-            <div class="all_main_h3">
-                <ul class="item">
-                    <li class="text-index">
-                        <h3 class="text-title-h3-index">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-                        <p> Идейные соображения, а также начало повседневной работы по формированию
-                        позиции.</p>
-                    </li>
-                </ul>
-                <ul class="item">
-                    <li class="text-index">
-                        <h3 class="text-title-h3-index">ПУНКТУАЛЬНОСТЬ</h3>
-                        <p>Задача организации, в особенности же рамки и место обучения кадров влечет за
-                        собой.</p>
-                    </li>
-                </ul>
-                <ul class="item">
-                    <li class="text-index">
-                        <h3 class="text-title-h3-index">ПЛАНИРОВАНИЕ</h3>
-                        <p>Равным образом консультация с широким активом в значительной степени
-                        обуславливает.</p>
-                    </li>
-                </ul>
-                <ul class="item">
-                    <li class="text-index">
-                        <h3 class="text-title-h3-index">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-                        <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                    </li>
-                </ul>
-            </div>
+      </div>
+    </header>
+    <!-- Start main-content -->
+    <main>
+      <div class="container">
+        <section class="complementary section">
+          <h1 class="font-size-title">
+            ЭФФЕКТИВНЫЕ РЕШЕНИЯ<span>ДЛЯ ВАШЕГО БИЗНЕСА</span>
+          </h1>
+          <button type="button" class="pointer font-size-button-index">
+            Заказать слугу
+          </button>
         </section>
-            <section class="section">
-            <div class="section_h2">
+        <section class="section">
+          <div class="all_main_h3">
+            <ul class="item">
+              <li class="text-index">
+                <h3 class="text-title-h3-index">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                <p>
+                  Идейные соображения, а также начало повседневной работы по
+                  формированию позиции.
+                </p>
+              </li>
+            </ul>
+            <ul class="item">
+              <li class="text-index">
+                <h3 class="text-title-h3-index">ПУНКТУАЛЬНОСТЬ</h3>
+                <p>
+                  Задача организации, в особенности же рамки и место обучения
+                  кадров влечет за собой.
+                </p>
+              </li>
+            </ul>
+            <ul class="item">
+              <li class="text-index">
+                <h3 class="text-title-h3-index">ПЛАНИРОВАНИЕ</h3>
+                <p>
+                  Равным образом консультация с широким активом в значительной
+                  степени обуславливает.
+                </p>
+              </li>
+            </ul>
+            <ul class="item">
+              <li class="text-index">
+                <h3 class="text-title-h3-index">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                <p>
+                  Значимость этих проблем настолько очевидна, что реализация
+                  плановых заданий.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="section">
+          <div class="section_h2">
             <h2 class="text-title-h2-index">Чем мы занимаемся</h2>
-                <ul class="all_main_h2">
-                    <li class="item"><img src="./images/engage_a.jpg" alt="engage1" width="370" /></li>
-                    <li class="item"><img src="./images/engage_b.jpg" alt="engage2" width="370" /></li>
-                    <li class="item"><img src="./images/engage_c.jpg" alt="engage3" width="370" /></li>
-                </ul>
-            </div>
-            </section>
-            <section class="section">
-                <h2 class="text-title-h2-index">Наша команда</h2>
+            <ul class="all_main_h2">
+              <li class="item">
+                <img src="./images/engage_a.jpg" alt="engage1" width="370" />
+              </li>
+              <li class="item">
+                <img src="./images/engage_b.jpg" alt="engage2" width="370" />
+              </li>
+              <li class="item">
+                <img src="./images/engage_c.jpg" alt="engage3" width="370" />
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section class="section">
+          <h2 class="text-title-h2-index">Наша команда</h2>
 
-                <ul class="all_main_h2_team">
-                    <li class="item_team">
-                        <img src="./images/pd.jpg" alt="product designer" width="270" />
-                        <h4 class="text-team-index">Игорь Демьяненко</h4>
-                        <p class="text-command-professions-index">Product Designer</p>
-                    </li>
-                    <li class="item_team">
-                        <img src="./images/fd.jpg" alt="frontend developer" width="270" />
-                        <h4 class="text-team-index">Ольга Репина</h4>
-                        <p class="text-command-professions-index">Frontend Developer</p>
-                    </li>
-                    <li class="item_team">
-                        <img src="./images/m.jpg" alt="marketing" width="270" />
-                        <h4 class="text-team-index">Николай Тарасов</h4>
-                        <p class="text-command-professions-index">Marketing</p>
-                    </li>
-                    <li class="item_team">
-                        <img src="./images/uid.jpg" alt="ui designer" width="270" />
-                        <h4 class="text-team-index">Михаил Ермаков</h4>
-                        <p class="text-command-professions-index">UI Designer</p>
-                    </li>
-                </ul>
-
-            </section>
-        </main>
-        <!-- Footer -->
-        <footer>
-            <div class="container section">
-                <div class="footer_all">
-                    <div class="footer_all_box">
-                        <a class="studiocolor_bottom" href="https://masenkoss.github.io/goit-markup-hw-02/"
-                            ><span class="webcolor">Web</span>Studio</a>
-                        <ul class="footer_all_box_contacts">
-                            <li>
-                                <address class="address_index">г. Киев, пр-т Леси Украинки, 26</address>
-                            </li>
-                            <li>
-                                <a class="nav-text-footer" href="mailto:">info@example.com</a>
-                            </li>
-                            <li>
-                                <a class="nav-text-footer" href="tel:+380961111111">+38 099 111 11 11</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </body>
+          <ul class="all_main_h2_team">
+            <li class="item_team">
+              <img src="./images/pd.jpg" alt="product designer" width="270" />
+              <h4 class="text-team-index">Игорь Демьяненко</h4>
+              <p class="text-command-professions-index">Product Designer</p>
+            </li>
+            <li class="item_team">
+              <img src="./images/fd.jpg" alt="frontend developer" width="270" />
+              <h4 class="text-team-index">Ольга Репина</h4>
+              <p class="text-command-professions-index">Frontend Developer</p>
+            </li>
+            <li class="item_team">
+              <img src="./images/m.jpg" alt="marketing" width="270" />
+              <h4 class="text-team-index">Николай Тарасов</h4>
+              <p class="text-command-professions-index">Marketing</p>
+            </li>
+            <li class="item_team">
+              <img src="./images/uid.jpg" alt="ui designer" width="270" />
+              <h4 class="text-team-index">Михаил Ермаков</h4>
+              <p class="text-command-professions-index">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <div class="container section">
+        <div class="footer_all">
+          <div class="footer_all_box">
+            <a
+              class="studiocolor_bottom"
+              href="https://masenkoss.github.io/goit-markup-hw-02/"
+              ><span class="webcolor">Web</span>Studio</a
+            >
+            <ul class="footer_all_box_contacts">
+              <li>
+                <address class="address_index">
+                  г. Киев, пр-т Леси Украинки, 26
+                </address>
+              </li>
+              <li>
+                <a class="nav-text-footer" href="mailto:">info@example.com</a>
+              </li>
+              <li>
+                <a class="nav-text-footer" href="tel:+380961111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
