--- a/portfolio.html
+++ b/portfolio.html
@@ -1,157 +1,209 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>"Homework-#-3-portfolio"</title>
-        <link rel="preconnect" href="https://fonts.gstatic.com" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./css/modern-normalize.css">
-        <link rel="stylesheet" href="./css/styles.css" />
-    </head>
-    <body class="body-styles">
-        <header>
-            <div class="container">
-                <div class="all_nav">
-                    <a class="nav_all_link_logo studiocolor-top" href="https://masenkoss.github.io/goit-markup-hw-02/"><span class="webcolor">Web</span>Studio</a>
-                    <nav>
-                        <ul class="nav_all_link">
-                            <li class="item">
-                                <a class="nav-link" href="https://masenkoss.github.io/goit-markup-hw-02/index.html">Студия</a>
-                            </li>
-                            <li class="item">
-                                <a class="nav-link" href="https://masenkoss.github.io/goit-markup-hw-02/portfolio.html">Портфолио</a>
-                            </li>
-                            <li class="item">
-                                <a class="nav-link" href="">Контакты</a>
-                            </li>
-                        </ul>
-                    </nav>
-                     <div>
-                    <ul class="contact_nav">
-                        <li class="item">
-                            <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
-                        </li>
-                        <li class="item">
-                            <a class="nav-link-tel" href="tel:+380961111111">+38 096 111 11 11</a>
-                        </li>
-                    </ul>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <!-- Main-content -->
-        <main>
-            <section>
-                <ul>
-                    <li>
-                        <button type="button" class="pointer font-size-button-portfolio">
-                            Все
-                        </button>
-                    </li>
-                    <li>
-                        <button type="button" class="pointer font-size-button-portfolio">
-                            Веб-сайты
-                        </button>
-                    </li>
-                    <li>
-                        <button type="button" class="pointer font-size-button-portfolio">
-                            Приложения
-                        </button>
-                    </li>
-                    <li>
-                        <button type="button" class="pointer font-size-button-portfolio">
-                            Дизайн
-                        </button>
-                    </li>
-                    <li>
-                        <button type="button" class="pointer font-size-button-portfolio">
-                            Маркетинг
-                        </button>
-                    </li>
-                </ul>
-                <ul>
-                    <li>
-                        <img src="./images/web-site-m.jpg" alt="web-site" />
-                        <h2 class="text-title-portfolio">Технокряк</h2>
-                        <p class="text-portfolio">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img src="./images/golden-star-m.jpg" alt="golden star" width="370" />
-                        <h2 class="text-title-portfolio">Постер New Orlean vs Golden Star</h2>
-                        <p class="text-portfolio">Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./images/seafood-m.jpg" alt="seafood" width="370" />
-                        <h2 class="text-title-portfolio">Ресторан Seafood</h2>
-                        <p class="text-portfolio">Приложение</p>
-                    </li>
-                    <li>
-                        <img src="./images/prime-m.jpg" alt="prime" width="370" />
-                        <h2 class="text-title-portfolio">Проект Prime</h2>
-                        <p class="text-portfolio">Маркетинг</p>
-                    </li>
-                    <li>
-                        <img src="./images/boxes-m.jpg" alt="boxes" width="370" />
-                        <h2 class="text-title-portfolio">Проект Boxes</h2>
-                        <p class="text-portfolio">Приложение</p>
-                    </li>
-                    <li>
-                        <img src="./images/inspiration-m.jpg" alt="inspiration" width="370" />
-                        <h2 class="text-title-portfolio">Inspiration has no Borders</h2>
-                        <p class="text-portfolio">Веб-сайт</p>
-                    </li>
-                    <li>
-                        <img
-                            src="./images/limited-edition-m.jpg"
-                            alt="limited edition"
-                            width="370"
-                        />
-                        <h2 class="text-title-portfolio">Издание Limited Edition</h2>
-                        <p class="text-portfolio">Дизайн</p>
-                    </li>
-                    <li>
-                        <img src="./images/lab-m.jpg" alt="lab" width="370" />
-                        <h2 class="text-title-portfolio">Проект LAB</h2>
-                        <p class="text-portfolio">Маркетинг</p>
-                    </li>
-                    <li>
-                        <img
-                            src="./images/growing-business-m.jpg"
-                            alt="growing business"
-                            width="370"
-                        />
-                        <h2 class="text-title-portfolio">Growing Business</h2>
-                        <p class="text-portfolio">Приложение</p>
-                    </li>
-                </ul>
-            </section>
-        </main>
-        <!-- Footer -->
-        <footer>
-            <div class="container section">
-                <div class="footer_all">
-                    <div class="footer_all_box">
-                        <a class="studiocolor_bottom" href="https://masenkoss.github.io/goit-markup-hw-02/"
-                            ><span class="webcolor">Web</span>Studio</a>
-                        <ul class="footer_all_box_contacts">
-                            <li>
-                                <address class="address_index">г. Киев, пр-т Леси Украинки, 26</address>
-                            </li>
-                            <li>
-                                <a class="nav-text-footer" href="mailto:">info@example.com</a>
-                            </li>
-                            <li>
-                                <a class="nav-text-footer" href="tel:+380961111111">+38 099 111 11 11</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>"Homework-#-3-portfolio"</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body class="body-styles">
+    <header>
+      <div class="container section header_border">
+        <div class="all_nav">
+          <a
+            class="nav_all_link_logo studiocolor-top"
+            href="https://masenkoss.github.io/goit-markup-hw-02/"
+            ><span class="webcolor">Web</span>Studio</a
+          >
+          <nav>
+            <ul class="nav_all_link">
+              <li class="item">
+                <a
+                  class="nav-link"
+                  href="https://masenkoss.github.io/goit-markup-hw-02/index.html"
+                  >Студия</a
+                >
+              </li>
+              <li class="item">
+                <a
+                  class="nav-link"
+                  href="https://masenkoss.github.io/goit-markup-hw-02/portfolio.html"
+                  >Портфолио</a
+                >
+              </li>
+              <li class="item">
+                <a class="nav-link" href="">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+          <div>
+            <ul class="contact_nav">
+              <li class="item">
+                <a class="nav-link-mail" href="mailto:">info@devstudio.com</a>
+              </li>
+              <li class="item">
+                <a class="nav-link-tel" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Main-content -->
+    <main>
+      <div class="container">
+        <section class="section">
+          <div class="button_portfolio">
+            <ul class="all_portfolio_button">
+              <li>
+                <button
+                  type="button"
+                  class="pointer font-size-button-portfolio"
+                >
+                  Все
+                </button>
+              </li>
+              <li>
+                <button
+                  type="button"
+                  class="pointer font-size-button-portfolio"
+                >
+                  Веб-сайты
+                </button>
+              </li>
+              <li>
+                <button
+                  type="button"
+                  class="pointer font-size-button-portfolio"
+                >
+                  Приложения
+                </button>
+              </li>
+              <li>
+                <button
+                  type="button"
+                  class="pointer font-size-button-portfolio"
+                >
+                  Дизайн
+                </button>
+              </li>
+              <li>
+                <button
+                  type="button"
+                  class="pointer font-size-button-portfolio"
+                >
+                  Маркетинг
+                </button>
+              </li>
+            </ul>
+          </div>
+          <div class="portfolio_icon">
+            <ul>
+              <li class="portfolio_element">
+                <img src="./images/web-site-m.jpg" alt="web-site" />
+                <h2 class="text-title-portfolio">Технокряк</h2>
+                <p class="text-portfolio">Веб-сайт</p>
+              </li>
+              <li class="portfolio_element">
+                <img
+                  src="./images/golden-star-m.jpg"
+                  alt="golden star"
+                  width="370"
+                />
+                <h2 class="text-title-portfolio">
+                  Постер New Orlean vs Golden Star
+                </h2>
+                <p class="text-portfolio">Дизайн</p>
+              </li>
+              <li class="portfolio_element">
+                <img src="./images/seafood-m.jpg" alt="seafood" width="370" />
+                <h2 class="text-title-portfolio">Ресторан Seafood</h2>
+                <p class="text-portfolio">Приложение</p>
+              </li>
+              <li class="portfolio_element">
+                <img src="./images/prime-m.jpg" alt="prime" width="370" />
+                <h2 class="text-title-portfolio">Проект Prime</h2>
+                <p class="text-portfolio">Маркетинг</p>
+              </li>
+              <li class="portfolio_element">
+                <img src="./images/boxes-m.jpg" alt="boxes" width="370" />
+                <h2 class="text-title-portfolio">Проект Boxes</h2>
+                <p class="text-portfolio">Приложение</p>
+              </li>
+              <li class="portfolio_element">
+                <img
+                  src="./images/inspiration-m.jpg"
+                  alt="inspiration"
+                  width="370"
+                />
+                <h2 class="text-title-portfolio">Inspiration has no Borders</h2>
+                <p class="text-portfolio">Веб-сайт</p>
+              </li>
+              <li class="portfolio_element">
+                <img
+                  src="./images/limited-edition-m.jpg"
+                  alt="limited edition"
+                  width="370"
+                />
+                <h2 class="text-title-portfolio">Издание Limited Edition</h2>
+                <p class="text-portfolio">Дизайн</p>
+              </li>
+              <li class="portfolio_element">
+                <img src="./images/lab-m.jpg" alt="lab" width="370" />
+                <h2 class="text-title-portfolio">Проект LAB</h2>
+                <p class="text-portfolio">Маркетинг</p>
+              </li>
+              <li class="portfolio_element">
+                <img
+                  src="./images/growing-business-m.jpg"
+                  alt="growing business"
+                  width="370"
+                />
+                <h2 class="text-title-portfolio">Growing Business</h2>
+                <p class="text-portfolio">Приложение</p>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </div>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <div class="container section">
+        <div class="footer_all">
+          <div class="footer_all_box">
+            <a
+              class="studiocolor_bottom"
+              href="https://masenkoss.github.io/goit-markup-hw-02/"
+              ><span class="webcolor">Web</span>Studio</a
+            >
+            <ul class="footer_all_box_contacts">
+              <li>
+                <address class="address_index">
+                  г. Киев, пр-т Леси Украинки, 26
+                </address>
+              </li>
+              <li>
+                <a class="nav-text-footer" href="mailto:">info@example.com</a>
+              </li>
+              <li>
+                <a class="nav-text-footer" href="tel:+380961111111"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
